src/objects/Consult_Holds__c.object
<CustomObject>
    <description>Table that holds a record of every hold placed on a consult inventory block.</description>
    <fields>
        <fullName>Active_Hold__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a hold is still active. Just a quick way of filtering this down to the records I have to check against.</description>
        <label>Active Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Inventory__c</fullName>
        <description>Link to the consult inventory block that this hold applies to.</description>
        <label>Consult Inventory</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>Consult Holds</relationshipLabel>
        <relationshipName>Consult_Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hold_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that placed the consult hold</description>
        <label>Hold By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consult_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Time__c</fullName>
        <label>Hold Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Permanent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a hold is permanent and will not expire. Permanent holds have to be manually removed.</description>
        <label>Permanent</label>
        <type>Checkbox</type>
    </fields>
    <label>Consult Hold</label>
    <nameField>
        <displayFormat>Hold-{0}</displayFormat>
        <label>Consult Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consult Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>